[tool.poetry]
name = "prsv-tools"
version = "0.1.0"
description = """
Utilities to ingest to and manage a Preservica \
instance at the New York Public Library\
"""
authors = [
    "Hilary Shiue <hilaryszuyinshiue@nypl.org>",
    "Nick Krabbenhoeft <nickkrabbenhoeft@nypl.org>",
]
license = "MIT"
readme = "README.md"
packages = [{include = "prsv_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.17"
lxml = "^4.9.3"
requests = "^2.31.0"
bagit = "^1.8.1"
schema = "^0.7.5"
xlsxwriter = "^3.2.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
nox = "^2023.4.22"
mypy = "^1.4.1"
nox-poetry = "^1.0.3"
coverage = "^7.2.7"
pygments = "^2.16.1"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
lint_er = 'prsv_tools.ingest.lint_er:main'
lint_ami = 'prsv_tools.ingest.lint_ami:main'
flatten_er_metadata = 'prsv_tools.ingest.flatten_er_metadata_folder:main'
get_schemas = 'prsv_tools.manage.get_schemas:main'
validate_ingest = 'prsv_tools.ingest.ingest_validator:main'
creds = 'prsv_tools.utility.api:main'
retry_workflows = 'prsv_tools.ingest.retry_workflows:main'
export_metadata_only = 'prsv_tools.manage.export_metadata_only:main'
unpack_reports = 'prsv_tools.manage.unpack_reports:main'

[tool.mypy]
exclude = [
    'package_er\.py$',
    'preservicatoken\.py$'
]

[[tool.mypy.overrides]]
module = "prsv_tools.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
